# pytest-super-check

./: .travis.yml  AUTHORS.rst  HISTORY.rst  MANIFEST.in  README.rst  pytest_super_check.py  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  test_pytest_super_check.py  tox.ini
requirements/: py310.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: pytest_super_check.py
src/pytest_super_check/: __init__.py
tests/: test_it.py  test_pytest_super_check.py
