[metadata]
name = pytest-super-check
version = 2.0.0
description = Pytest plugin to check your TestCase classes call super in setUp, tearDown, etc.
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/pytest-super-check
project_urls =
    Changelog = https://github.com/adamchainz/pytest-super-check/blob/master/HISTORY.rst
license = BSD
keywords = pytest, super, unittest, testcase
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = pytest_super_check
include_package_data = True
install_requires = pytest
python_requires = >=3.5
zip_safe = False

[options.entry_points]
pytest11 =
    super_check = pytest_super_check

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
line_length = 88
multi_line_output = 3
use_parentheses = True

[tool:multilint]
paths =
    setup.py
    src
    tests
