[metadata]
name = pytest-super-check
version = 2.4.0
description = Pytest plugin to check your TestCase classes call super in setUp, tearDown, etc.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/pytest-super-check
project_urls =
    Changelog = https://github.com/adamchainz/pytest-super-check/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = pytest, super, unittest, testcase
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires = pytest
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    super_check = pytest_super_check

[flake8]
max-line-length = 88
extend-ignore = E203
